# binance_historical_data

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  tox.ini
src/binance_historical_data/: __init__.py  data_dumper.py  kline.py  logger.py
tests/: test_binance_historical_data.py
