[tool.poetry]
name = "binance_historical_data"
version = "0.1.4"
description = ""
authors = ["stanislav <stas.prokopiev@gmail.com>"]
readme = "README.rst"
license="MIT"
repository = "https://github.com/stas-prokopiev/binance_historical_data"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.62.3"
char = "^0.1.2"
mpire = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
